--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
-    <string name="app_name">santander-dev-week</string>
+    <string name="app_name">Santander</string>
+    <string name="text_saldo_disponivel">Saldo disponível</string>
+    <string name="text_saldo_limite">Saldo - Limite</string>
+    <string name="text_ver_extrato">Ver Extrato</string>
+    <string name="txt_pagar">Pagar</string>
+    <string name="txt_transferir">Transferir</string>
+    <string name="txt_recarregar">Recarregar</string>
+    <string name="txt_cartao_final">Cartão Final</string>
 </resources>
